--- a/PROJECT/index.html
+++ b/PROJECT/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
    
   </head>
-  <body data-bs-spy="scroll" data-bs-target=".navbar">
+  <body data-bs-spy="scroll" data-bs-target=".navbar" class="bg-black">
     <nav class="navbar navbar-expand-lg  navbar-dark text-uppercase ">
         <div class="container-fluid">
           <a class="navbar-brand font-weight-bold" href="#"></a>
