--- a/PROJECT/index.html
+++ b/PROJECT/index.html
@@ -96,7 +96,7 @@
 
                             </div>
                         </div>
-                        <a href="NIKHILESH NAIDU (3).pdf"download data-aos="flip-left" data-aos-duration="2000"value="Download C.V"class="my-5 btn btn-outline-info">Download CV</a>
+                        <a href="NIKHIL CV.pdf"download data-aos="flip-left" data-aos-duration="2000"value="Download C.V"class="my-5 btn btn-outline-info">Download CV</a>
                         <a href="#s3" data-aos="flip-left" data-aos-duration="2000"value="Contact Me"class="my-5 mx-4 btn btn-outline-info">Contact</a>
                         
                 </div>
