--- a/Tharai/index.html
+++ b/Tharai/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- navigation bar  -->
     <nav class="nav-bar" >
-        <img src="img/images (2).png" alt="" >
+        <img src="img/loogo.png" alt="" ><h2 class="title">Tharai Edutech</h2>
         <div class="navigation">
         <ul >
             <li><a class="active"href="index.html">Home</a></li>
@@ -36,6 +36,104 @@
 </div>
 
 </section>
+ <!-- Popular Courses -->
+ <section id="courses">
+    <h1> Popular Courses </h1>
+    <p>Quality Training along  with</p>
+     <div class="course-box">
+        <div class="course" >
+            <img src="img/DSML2.jpg" alt="" >
+            <div class="details">
+                <span>Updated 12/03/2024</span>
+                <h6>DATA SCIENCCE AND MACHINE LAERANING</h6>
+            </div>
+            <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span>(145)</span>
+            </div>
+        </div>
+        <div class="course" >
+            <img src="img/MLAI.jpg" alt="">
+            <div class="details">
+                <span>Updated 12/03/2024</span>
+                <h6>ARTIFICIAL INTELLEGENCE AND MACHINE LEARNING </h6>
+            </div>
+            <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span>(145)</span>
+            </div>
+        </div>
+        <div class="course" >
+            <img src="img/DATAE2.jpg" alt="">
+            <div class="details">
+                <span>Updated 12/03/2024</span>
+                <h6>DATA ENGINEERING </h6>
+            </div>
+            <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span>(145)</span>
+            </div>
+        </div>
+        <div class="course" >
+            <img src="img/dataan.jpg" alt="">
+            <div class="details">
+                <span>Updated 12/03/2024</span>
+                <h6>DATA ANALYTICS </h6>
+            </div>
+            <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span>(145)</span>
+            </div>
+        </div>
+        <div class="course" >
+            <img src="img/busiAN.jpg" alt="">
+            <div class="details">
+                <span>Updated 12/03/2024</span>
+                <h6>BUSINESS ANALYTICS </h6>
+            </div>
+            <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span>(145)</span>
+            </div>
+        </div>
+        <div class="course" >
+            <img src="img/genai.jpg" alt="">
+            <div class="details">
+                <span>Updated 12/03/2024</span>
+                <h6>GENERATIVE AI </h6>
+            </div>
+            <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span>(145)</span>
+            </div>
+        </div>
+     </div>
+</section>
+
 <!-- features section -->
 <section class="feature">
     <h1> We Offer </h1>
@@ -43,9 +141,10 @@
     <div class="fea">
         <div class="features-box">
             <i class="fa-solid fa-school"></i>
-            <h3>100% Placement</h3>
+            <h3> Assistance</h3>
 
-           <p>We Provide Training from the Professionals in industry and 100% Placement.</p> 
+           <p>We Provide placement/Internship assistance.</p> 
+           <li>Based on Student Performance</li>
         </div>
         <div class="features-box">
             <i class="fa-solid fa-award"></i>
@@ -63,104 +162,7 @@
 
 
     </div>
-    <!-- Popular Courses -->
-    <section id="courses">
-        <h1> Popular Courses </h1>
-        <p>Quality Training along  with</p>
-         <div class="course-box">
-            <div class="course" >
-                <img src="img/DSML2.jpg" alt="" style="">
-                <div class="details">
-                    <span>Updated 12/03/2024</span>
-                    <h6>DATA SCIENCCE AND MACHINE LAERANING</h6>
-                </div>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <span>(145)</span>
-                </div>
-            </div>
-            <div class="course" >
-                <img src="img/MLAI.jpg" alt="">
-                <div class="details">
-                    <span>Updated 12/03/2024</span>
-                    <h6>ARTIFICIAL INTELLEGENCE AND MACHINE LEARNING </h6>
-                </div>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <span>(145)</span>
-                </div>
-            </div>
-            <div class="course" >
-                <img src="img/DATAE2.jpg" alt="">
-                <div class="details">
-                    <span>Updated 12/03/2024</span>
-                    <h6>DATA ENGINEERING </h6>
-                </div>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <span>(145)</span>
-                </div>
-            </div>
-            <div class="course" >
-                <img src="img/dataan.jpg" alt="">
-                <div class="details">
-                    <span>Updated 12/03/2024</span>
-                    <h6>DATA ANALYTICS </h6>
-                </div>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <span>(145)</span>
-                </div>
-            </div>
-            <div class="course" >
-                <img src="img/busiAN.jpg" alt="">
-                <div class="details">
-                    <span>Updated 12/03/2024</span>
-                    <h6>BUSINESS ANALYTICS </h6>
-                </div>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <span>(145)</span>
-                </div>
-            </div>
-            <div class="course" >
-                <img src="img/genai.jpg" alt="">
-                <div class="details">
-                    <span>Updated 12/03/2024</span>
-                    <h6>GENERATIVE AI </h6>
-                </div>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <span>(145)</span>
-                </div>
-            </div>
-         </div>
-    </section>
-
+   
     <div class="team"><h3>Our Team</h3></div>
 <section class="pro">
    
