--- a/tharai/contact.html
+++ b/tharai/contact.html
@@ -12,7 +12,7 @@
 <body>
     <!-- navigation bar  -->
     <nav class="nav-bar" >
-        <img src="img/images (2).png" alt="" >
+        <img src="img/loogo.png" alt="" ><h2 class="title">Tharai Edutech</h2>
         <div class="navigation">
         <ul >
             <li><a href="index.html">Home</a></li>
