--- a/tharai/index.html
+++ b/tharai/index.html
@@ -41,7 +41,7 @@
     <h1> Popular Courses </h1>
     <p>Quality Training along  with</p>
      <div class="course-box">
-        <div class="course" >
+        <div class="course "data-bs-toggle="modal" data-bs-target="#DSML" >
             <img src="img/DSML2.jpg" alt="" >
             <div class="details">
                 <span>Updated 12/03/2024</span>
@@ -56,7 +56,7 @@
                 <span>(145)</span>
             </div>
         </div>
-        <div class="course" >
+        <div class="course " data-bs-toggle="modal" data-bs-target="#AIML" >
             <img src="img/MLAI.jpg" alt="">
             <div class="details">
                 <span>Updated 12/03/2024</span>
@@ -133,6 +133,42 @@
         </div>
      </div>
 </section>
+<div class="projects-modal modal fade mt-5"id="DSML"aria-hidden="true"role="dialog"  >
+    <div class="modal-dialog modal-md"role=" document">
+        <div class="modal-content text-center">
+            <div class="modal-body text-center">
+                <div class="container-fluid py-3">
+                  <div class="row justify-content-center ">
+                    <div class="col-lg-12">
+                        <h2>Data Science and Machine Learning</h2><br>
+                       
+
+                    </div>
+                  </div>  
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+<div class="projects-modal modal fade mt-5"id="AIML"aria-hidden="true"role="dialog"  >
+    <div class="modal-dialog modal-md"role=" document">
+        <div class="modal-content text-center">
+            <div class="modal-body text-center">
+                <div class="container-fluid py-3">
+                  <div class="row justify-content-center ">
+                    <div class="col-lg-12">
+                        <h2>Artificial Intelligence and Machine Learnning</h2><br>
+                       
+
+                    </div>
+                  </div>  
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
 
 <!-- features section -->
 <section class="feature">
