--- a/tharai/index.html
+++ b/tharai/index.html
@@ -142,6 +142,7 @@
                   <div class="row justify-content-center ">
                     <div class="col-lg-12">
                         <h2>Data Science and Machine Learning</h2><br> 
+                        <p>in this course we r gonn alearn</p>
                     </div>
                   </div>  
                 </div>
