--- a/tharai/index.html
+++ b/tharai/index.html
@@ -9,19 +9,26 @@
 
     <title>Tharai Edutech</title>
 </head>
-<body>
+<body style="background-color:#8871fc;">
     <!-- navigation bar  -->
-    <nav class="nav-bar" >
+    <ul class="sidebar">
+        <li onclick="hide()"><a href="#" style="margin-left: 22px;" ><i class="fa-solid fa-xmark " ></i> </a></li>
+        <li><a class="active"href="index.html">Home</a></li>
+        <li><a href="about.html"> About</a></li>
+        <li><a href="courses.html">Courses</a></li>
+        <li><a href="contact.html">Contact</a></li>    
+    </ul>
+    <nav  class="nav-bar"  >
         <img src="img/loogo.png" alt="" ><h2 class="title">Tharai Edutech</h2>
-        <div class="navigation">
+
+        <div class="navigation" >
+          
         <ul >
-            <li><a class="active"href="index.html">Home</a></li>
-            <li><a href="about.html"> About</a></li>
-            <li><a href="courses.html">Courses</a></li>
-            <li><a href="contact.html">Contact</a></li>
-
-
-            
+            <li class="hideOnMobile"><a class="active"href="index.html">Home</a></li>
+            <li class="hideOnMobile"><a href="about.html"> About</a></li>
+            <li class="hideOnMobile"><a href="courses.html">Courses</a></li>
+            <li class="hideOnMobile"><a href="contact.html">Contact</a></li>   
+            <li  onclick=show()><a href="#" class="hide"><i class="fa-solid fa-2x fa-bars" ></i></a></li> 
         </ul>
     </div>
     </nav>
@@ -563,6 +570,15 @@
 
 </footer>
 
-
+<script>
+    function show(){
+        const s=document.querySelector('.sidebar')
+        s.style.display='flex';
+    }
+    function hide(){
+        const s=document.querySelector('.sidebar')
+        s.style.display='none';
+    }
+</script>
 </body>
 </html>
