--- a/tharai/index.html
+++ b/tharai/index.html
@@ -35,7 +35,7 @@
 <!-- hoome page -->
 <section class="home">
 <h2>Empower Your Learning Journey with Us!</h2>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem, hic. Illum quidem, temporibus, quasi natus soluta, magni vel maiores beatae ad asperiores nostrum? Aut, eum atque numquam iure veritatis illum!</p>
+<p>"Welcome to Tharai Edutech your go-to destination for mastering coding! Whether you're a newbie or a seasoned developer, our platform offers engaging courses, interactive tutorials, and expert guidance to help you level up your skills. Join us and unleash your coding superpowers today!"</p>
 <div class="button">
     <a  class="btn btn-outline-primary" >Learn More</a>
     <a class="btn btn-outline-warning" href="">View Courses</a>
