--- a/tharai/courses.html
+++ b/tharai/courses.html
@@ -13,14 +13,24 @@
 </head>
 <body>
     <!-- navigation bar  -->
-    <nav class="nav-bar" >
+    <ul class="sidebar">
+        <li onclick="hide()"><a href="#" style="margin-left: 22px;" ><i class="fa-solid fa-xmark " ></i> </a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html"> About</a></li>
+        <li><a class="active" href="courses.html">Courses</a></li>
+        <li><a  href="contact.html">Contact</a></li>    
+    </ul>
+    <nav  class="nav-bar"  >
         <img src="img/loogo.png" alt="" ><h2 class="title">Tharai Edutech</h2>
-        <div class="navigation">
+
+        <div class="navigation" >
+          
         <ul >
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html"> About</a></li>
-            <li><a class="active" href="courses.html">Courses</a></li>
-            <li><a  href="contact.html">Contact</a></li>      
+            <li class="hideOnMobile"><a href="index.html">Home</a></li>
+            <li class="hideOnMobile"><a href="about.html"> About</a></li>
+            <li class="hideOnMobile"><a class="active" href="courses.html">Courses</a></li>
+            <li class="hideOnMobile"><a href="contact.html">Contact</a></li>   
+            <li  onclick=show()><a href="#" class="hide"><i class="fa-solid fa-2x fa-bars" ></i></a></li> 
         </ul>
     </div>
     </nav>
@@ -568,6 +578,9 @@
         </div>
         
         </footer>
+        <script src="index.js">
+   
+        </script>
 
 </body>
 </html>
