--- a/tharai/index.html
+++ b/tharai/index.html
@@ -616,15 +616,8 @@
 
 </footer>
 
-<script>
-    function show(){
-        const s=document.querySelector('.sidebar')
-        s.style.display='flex';
-    }
-    function hide(){
-        const s=document.querySelector('.sidebar')
-        s.style.display='none';
-    }
+<script src="index.js">
+   
 </script>
 </body>
 </html>
