--- a/tharai/courses.html
+++ b/tharai/courses.html
@@ -55,8 +55,8 @@
         <section id="courses">
             <h1> Popular Courses </h1>
             <p>Quality Training along  with</p>
-             <div class="course-box" onclick="window.location.href='course-inner.html';">
-                <div class="course" >
+             <div class="course-box" tion.href='course-inner.html';">
+                <div class="course" > 
                     <img src="img/DSML2.jpg" alt="" >
                     <div class="details">
                         <span>Updated 12/03/2024</span>
