--- a/tharai/about.html
+++ b/tharai/about.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title >Tharai Edutech</title>
@@ -32,11 +33,11 @@
         </ul>
     </div>
     </nav>
-    <section class="about-home">
+    <section class="about-home" data-aos="fade-right" data-aos-duration="1000">
         <!-- <h2>About Tharai</h2> -->
         
         </section>
-        <section class="about-container">
+        <section class="about-container"data-aos="fade-left" data-aos-duration="2000">
             <img src="img/a.png" alt=""  style="width: 100%;">
             <div class="about-img">
                 <!-- <img src="img/a.png" alt="image">  -->
@@ -47,7 +48,7 @@
                 <h6>"Crafting Futures: Our Mission to Empower Through Code"</h6>
                 <p>"At Tharai, we're not just teaching code; we're igniting a digital revolution. Founded on a passion for technology and a commitment to accessible education, our platform is dedicated to empowering individuals worldwide to unlock their potential through the mastery of programming. With a dynamic team of industry experts and a relentless focus on innovation, we're reshaping the future one line of code at a time."</p>
                 <div class="about-fe">
-                    <img src="img/fe1.png" alt="">
+                    <img data-aos="fade-right" data-aos-duration="1000" src="img/fe1.png" alt="">
                     <div class="fe-text">
                         <h5>Proessional Courses</h5>
                         <p>"At Tharai, our courses are designed to meet industry demands head-on. From trending programming languages to essential development tools, we offer a curated selection of courses tailored to equip you with the skills employers seek. Stay competitive and advance your career with our industry-aligned curriculum."</p>
@@ -55,7 +56,7 @@
                     </div>
                  </div>
                  <div class="about-fe">
-                    <img src="img/cc.png" alt="">
+                    <img data-aos="fade-right" data-aos-duration="1000" src="img/cc.png" alt="">
                     <div class="fe-text">
                         <h5>Free Training</h5>
                         <p>We are Providing free Training for Certificate Courses for the first two batches.</p>
@@ -71,14 +72,14 @@
            
         </section>
         <section class="establish">
-            <h1>Our Eastablishments</h1>
-            <p>We wide range of business in the industry</p>
+            <h1 data-aos="fade-up" data-aos-duration="1000">Our Eastablishments</h1>
+            <p data-aos="fade-down" data-aos-duration="1000">"Diverse ventures, spanning industries wide."</p>
             <div class="trust-img">
-                <img src="img/trust (1).png" alt="">
-                <img src="img/trust (2).png" alt="">
-                <img src="img/trust (3).png" alt="">
-                <img src="img/trust (4).png" alt="">
-                <img src="img/trust (5).png" alt="">
+                <img data-aos="flip-left" data-aos-duration="2500" src="img/trust (1).png" alt="">
+                <img data-aos="flip-left" data-aos-duration="2500"  src="img/trust (2).png" alt="">
+                <img data-aos="flip-left" data-aos-duration="2500"  src="img/trust (3).png" alt="">
+                <img data-aos="flip-left" data-aos-duration="2500"  src="img/trust (4).png" alt="">
+                <img data-aos="flip-left" data-aos-duration="2500"  src="img/trust (5).png" alt="">
                 <!-- <img src="img/trust (6).png" alt=""> -->
 
             </div>
@@ -138,6 +139,10 @@
                 s.style.display='none';
             }
    
+        </script>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+          AOS.init();
         </script>
 </body>
 </html>
