--- a/tharai/courses.html
+++ b/tharai/courses.html
@@ -6,6 +6,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+   
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
@@ -35,15 +37,15 @@
     </div>
     </nav>
 
-    <section class="coursess">
+    <section  class="coursess">
         <div class="ctitle">
             <!-- <h2>COURSES</h2> -->
-            <p>"Dive into coding excellence with our dynamic array of online programming courses, tailored for every skill level."</p>
+            <p >"Dive into coding excellence with our dynamic array of online programming courses, tailored for every skill level."</p>
         </div>
        
         <div class="co">
-            <div class="coi">
-                <img src="img/cimage'.webp" alt="">
+            <div  class="coi">
+                <img  src="img/cimage'.webp" alt=" "  >
             </div>
 
 
@@ -581,6 +583,9 @@
         <script src="index.js">
    
         </script>
+        <script>
+            AOS.init();
+          </script>
 
 </body>
 </html>
