--- a/tharai/index.html
+++ b/tharai/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 
     <title>Tharai Edutech</title>
@@ -33,22 +35,22 @@
     </div>
     </nav>
 <!-- hoome page -->
-<section class="home">
-<h2>Empower Your Learning Journey with Us!</h2>
-<p>"Welcome to Tharai Edutech your go-to destination for mastering coding! Whether you're a newbie or a seasoned developer, our platform offers engaging courses, interactive tutorials, and expert guidance to help you level up your skills. Join us and unleash your coding superpowers today!"</p>
+<section data-aos="fade-right" data-aos-duration="1000" class="home">
+<h2 data-aos="fade-left" data-aos-duration="1000">Empower Your Learning Journey with Us!</h2>
+<p data-aos="fade-left" data-aos-duration="1000">"Welcome to Tharai Edutech your go-to destination for mastering coding! Whether you're a newbie or a seasoned developer, our platform offers engaging courses, interactive tutorials, and expert guidance to help you level up your skills. Join us and unleash your coding superpowers today!"</p>
 <div class="button">
-    <a  class="btn btn-outline-primary" >Learn More</a>
-    <a class="btn btn-outline-warning" href="">View Courses</a>
+    <a data-aos="flip-right" data-aos-duration="1000" class="btn btn-outline-primary" href="about.html" >Learn More</a>
+    <a data-aos="fade-right" data-aos-duration="1000" class="btn btn-outline-warning" href="courses.html">View Courses</a>
     
 </div>
 
 </section>
  <!-- Popular Courses -->
  <section id="courses">
-    <h1> Popular Courses </h1>
-    <p>Quality Training along  with</p>
-     <div class="course-box">
-        <div class="course "data-bs-toggle="modal" data-bs-target="#DSML" >
+    <h1 data-aos="fade-down" data-aos-duration="1000"> Popular Courses </h1>
+    <p data-aos="fade-up" data-aos-duration="1000">Quality Training along  with</p>
+     <div   class="course-box">
+        <div data-aos="fade-right" data-aos-duration="1000" class="course "data-bs-toggle="modal" data-bs-target="#DSML" >
             <img src="img/DSML2.jpg" alt="" >
             <div class="details">
                 <span>Updated 12/03/2024</span>
@@ -63,7 +65,7 @@
                 <span>(145)</span>
             </div>
         </div>
-        <div class="course " data-bs-toggle="modal" data-bs-target="#AIML" >
+        <div data-aos="fade-up" data-aos-duration="1000" class="course " data-bs-toggle="modal" data-bs-target="#AIML" >
             <img src="img/MLAI.jpg" alt="">
             <div class="details">
                 <span>Updated 12/03/2024</span>
@@ -78,7 +80,7 @@
                 <span>(145)</span>
             </div>
         </div>
-        <div class="course" >
+        <div data-aos="fade-left" data-aos-duration="1000" class="course" >
             <img src="img/DATAE2.jpg" data-bs-toggle="modal" data-bs-target="#DTER" alt="">
             <div class="details">
                 <span>Updated 12/03/2024</span>
@@ -93,7 +95,7 @@
                 <span>(145)</span>
             </div>
         </div>
-        <div class="course" >
+        <div data-aos="fade-right" data-aos-duration="1000" class="course" >
             <img src="img/dataan.jpg" data-bs-toggle="modal" data-bs-target="#DATS" alt="">
             <div class="details">
                 <span>Updated 12/03/2024</span>
@@ -108,7 +110,7 @@
                 <span>(145)</span>
             </div>
         </div>
-        <div class="course" >
+        <div data-aos="fade-up" data-aos-duration="1000" class="course" >
             <img src="img/busiAN.jpg" data-bs-toggle="modal" data-bs-target="#BSAS" alt="">
             <div class="details">
                 <span>Updated 12/03/2024</span>
@@ -123,7 +125,7 @@
                 <span>(145)</span>
             </div>
         </div>
-        <div class="course" >
+        <div data-aos="fade-left" data-aos-duration="1000" class="course" >
             <img src="img/genai.jpg" data-bs-toggle="modal" data-bs-target="#GNAI" alt="">
             <div class="details">
                 <span>Updated 12/03/2024</span>
@@ -423,23 +425,23 @@
 
 <!-- features section -->
 <section class="feature">
-    <h1> We Offer </h1>
-    <p>Quality Training along  with</p>
+    <h1 data-aos="fade-right" data-aos-duration="1000"> We Offer </h1>
+    <p data-aos="fade-up" data-aos-duration="1000">Quality Training along  with</p>
     <div class="fea">
-        <div class="features-box">
+        <div data-aos="zoom-in" data-aos-duration="1000" class="features-box">
             <i class="fa-solid fa-school"></i>
             <h3> Assistance</h3>
 
            <p>We Provide placement/Internship assistance.</p> 
            <li>Based on Student Performance</li>
         </div>
-        <div class="features-box">
+        <div data-aos="zoom-in" data-aos-duration="1000" class="features-box">
             <i class="fa-solid fa-award"></i>
             <h3>Global Certification</h3>
 
            <p>"Unlock Your Potential with Our Globally Recognized Certification Program: Gain the Skills and Credentials Needed to Thrive in Any Industry, Anywhere in the World."</p> 
         </div>
-        <div class="features-box">
+        <div data-aos="zoom-in" data-aos-duration="1000" class="features-box">
             <i class="fa-sharp fa-solid fa-desktop"></i>
             <h3>Online Course</h3>
 
@@ -455,7 +457,7 @@
         <h1> Our Team </h1>
         <!-- <p>Quality Training along  with</p> -->
          <div class="p-box">
-            <div class="p" >
+            <div data-aos="flip-up" data-aos-duration="1000" class="p" >
                 <img src="img/pro2.webp" class="profile" alt="">
         <h5>Nikhil</h5>
         <p>CEO</p> 
@@ -464,7 +466,7 @@
         <a href=""><i class="fa-brands fa-facebook fa-2x"></i></a>
               
             </div>
-            <div class="p" data-bs-toggle="modal" data-bs-target="#AIML" >
+            <div data-aos="flip-up" data-aos-duration="1000" class="p" data-bs-toggle="modal" data-bs-target="#AIML" >
                 <img src="img/pro2.webp" class="profile" alt="">
                 <h5>Nikhil</h5>
                 <p>CEO</p> 
@@ -472,7 +474,7 @@
                 <a href=""><i class="fa-brands fa-instagram fa-2x"></i></a>
                 <a href=""><i class="fa-brands fa-facebook fa-2x"></i></a>
             </div>
-            <div class="p" >
+            <div data-aos="flip-up" data-aos-duration="1000" class="p" >
                 <img src="img/pro2.webp" class="profile" alt="">
         <h5>Nikhil</h5>
         <p>CEO</p> 
@@ -480,7 +482,7 @@
         <a href=""><i class="fa-brands fa-instagram fa-2x"></i></a>
         <a href=""><i class="fa-brands fa-facebook fa-2x"></i></a>
             </div>
-            <div class="p" >
+            <div data-aos="flip-up" data-aos-duration="1000" class="p" >
                 <img src="img/pro2.webp" class="profile" alt="">
         <h5>Nikhil</h5>
         <p>CEO</p> 
@@ -551,12 +553,12 @@
 <!-- registration form -->
 <section class="register">
     <div class="message">
-        <p>Just one click away from a Great Learning Journey</p>
-        <h1>Fill The Form for Enquiry</h1>
+        <p data-aos="fade-up" data-aos-duration="1000">Just one click away from a Great Learning Journey</p>
+        <h1 data-aos="fade-down" data-aos-duration="1000">Fill The Form for Enquiry</h1>
 
 
     </div>
-    <div class="form">
+    <div data-aos="fade-left" data-aos-duration="1000" class="form">
         <h3>Get in Touch </h3>
         <input type="text" placeholder="Name" id="">
         <input type="email"placeholder="Email" name="" id="">
@@ -618,6 +620,10 @@
 
 <script src="index.js">
    
+</script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init();
 </script>
 </body>
 </html>
