--- a/tharai/contact.html
+++ b/tharai/contact.html
@@ -9,7 +9,7 @@
 
     <title>Tharai Edutech</title>
 </head>
-<body>
+<body style="background-color:#8871fc;">
     <!-- navigation bar  -->
     <ul class="sidebar">
         <li onclick="hide()"><a href="#" style="margin-left: 22px;" ><i class="fa-solid fa-xmark " ></i> </a></li>
