--- a/tharai/courses.html
+++ b/tharai/courses.html
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <title>Tharai Edutech</title>
 </head>
-<body>
+<body style="background-color:#8871fc;">
     <!-- navigation bar  -->
     <ul class="sidebar">
         <li onclick="hide()"><a href="#" style="margin-left: 22px;" ><i class="fa-solid fa-xmark " ></i> </a></li>
@@ -40,12 +40,12 @@
     <section  class="coursess">
         <div class="ctitle">
             <!-- <h2>COURSES</h2> -->
-            <p >"Dive into coding excellence with our dynamic array of online programming courses, tailored for every skill level."</p>
+            <p  data-aos="fade-left" data-aos-duration="1000">"Dive into coding excellence with our dynamic array of online programming courses, tailored for every skill level."</p>
         </div>
        
         <div class="co">
             <div  class="coi">
-                <img  src="img/cimage'.webp" alt=" "  >
+                <img data-aos="fade-right" data-aos-duration="1000"  src="img/cimage'.webp" alt=" "  >
             </div>
 
 
@@ -55,10 +55,10 @@
         
         </section>
         <section id="courses">
-            <h1> Popular Courses </h1>
-            <p>Quality Training along  with</p>
+            <h1 data-aos="fade-up" data-aos-duration="1000"> Popular Courses </h1>
+            <p data-aos="fade-down" data-aos-duration="1000">Quality Training along  with</p>
              <div class="course-box" tion.href='course-inner.html';">
-                <div class="course" > 
+                <div data-aos="fade-right" data-aos-duration="1000" class="course" > 
                     <img src="img/DSML2.jpg" alt="" >
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -73,7 +73,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-up" data-aos-duration="1000" class="course" >
                     <img src="img/MLAI.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -88,7 +88,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-left" data-aos-duration="1000" class="course" >
                     <img src="img/DATAE2.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -103,7 +103,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-right" data-aos-duration="1000" class="course" >
                     <img src="img/dataan.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -118,7 +118,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-down" data-aos-duration="1000" class="course" >
                     <img src="img/busiAN.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -133,7 +133,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-left" data-aos-duration="1000" class="course" >
                     <img src="img/genai.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -148,7 +148,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-right" data-aos-duration="1000" class="course" >
                     <img src="img/bc2.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -163,7 +163,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-down" data-aos-duration="1000" class="course" >
                     <img src="img/dsa.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -182,10 +182,10 @@
              </div>
         </section>
         <section id="courses">
-            <h1> PROGRAMMING COURSES </h1>
-            <p>Web Development Courses</p>
+            <h1 data-aos="fade-up" data-aos-duration="1000"> PROGRAMMING COURSES </h1>
+            <p data-aos="fade-down" data-aos-duration="1000">Web Development Courses</p>
              <div class="course-box">
-                <div class="course" >
+                <div data-aos="fade-right" data-aos-duration="1000" class="course" >
                     <img src="img/java.jpg" alt="" >
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -200,7 +200,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-up" data-aos-duration="1000" class="course" >
                     <img src="img/py.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -215,7 +215,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-left" data-aos-duration="1000" class="course" >
                     <img src="img/dot.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -230,7 +230,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-right" data-aos-duration="1000" class="course" >
                     <img src="img/MERN.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -245,7 +245,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-up" data-aos-duration="1000" class="course" >
                     <img src="img/MEAN.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -260,7 +260,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-left" data-aos-duration="1000" class="course" >
                     <img src="img/UI.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -278,10 +278,10 @@
              </div>
         </section>
         <section id="courses">
-            <h1> PROGRAMMING LANGUAGES </h1>
-            <p>Programming Courses</p>
+            <h1 data-aos="fade-up" data-aos-duration="1000">  PROGRAMMING LANGUAGES </h1>
+            <p data-aos="fade-down" data-aos-duration="1000">Programming Courses</p>
              <div class="course-box">
-                <div class="course" >
+                <div data-aos="fade-right" data-aos-duration="1000" class="course" >
                     <img src="img/java.jpg" alt="" >
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -296,7 +296,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-down" data-aos-duration="1000" class="course" >
                     <img src="img/py.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -311,7 +311,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-left" data-aos-duration="1000" class="course" >
                     <img src="img/dot.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -326,7 +326,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-right" data-aos-duration="1000" class="course" >
                     <img src="img/MERN.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -341,7 +341,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-up" data-aos-duration="1000" class="course" >
                     <img src="img/MEAN.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -356,7 +356,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-left" data-aos-duration="1000" class="course" >
                     <img src="img/UI.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -374,10 +374,10 @@
              </div>
         </section>
          <section id="courses">
-            <h1> DATABASE LANGUAGES </h1>
-            <p> Data Base Handling Courses</p>
+            <h1 data-aos="fade-up" data-aos-duration="1000"> DATABASE LANGUAGES </h1>
+            <p data-aos="fade-down" data-aos-duration="1000"> Data Base Handling Courses</p>
              <div class="course-box">
-                <div class="course" >
+                <div data-aos="fade-right" data-aos-duration="1000" class="course" >
                     <img src="img/SQL.jpg" alt="" >
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -392,7 +392,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-up" data-aos-duration="1000" class="course" >
                     <img src="img/Elas.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -407,7 +407,7 @@
                         <span>(145)</span>
                     </div>  
                 </div>
-                <div class="course" >
+                <div data-aos="fade-left" data-aos-duration="1000" class="course" >
                     <img src="img/odb.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -422,7 +422,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-right" data-aos-duration="1000" class="course" >
                     <img src="img/mssql.jpg.crdownload" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -437,7 +437,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-up" data-aos-duration="1000" class="course" >
                     <img src="img/busiAN.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -452,7 +452,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-left" data-aos-duration="1000" class="course" >
                     <img src="img/maria.jpg" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -467,7 +467,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-right" data-aos-duration="1000" class="course" >
                     <img src="img/mongo.png" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -482,7 +482,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-up" data-aos-duration="1000" class="course" >
                     <img src="img/cass.png" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -500,10 +500,10 @@
              </div>
         </section>
         <section id="courses">
-            <h1> CERTIFICATIONS </h1>
-            <p>Cretifications to Boost your Profile</p>
+            <h1 data-aos="fade-up" data-aos-duration="1000"> CERTIFICATIONS </h1>
+            <p data-aos="fade-down" data-aos-duration="1000">Cretifications to Boost your Profile</p>
              <div class="course-box">
-                <div class="course" >
+                <div data-aos="fade-right" data-aos-duration="1000" class="course" >
                     <img src="img/oscp.jpg" alt="" >
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -518,7 +518,7 @@
                         <span>(145)</span>
                     </div>
                 </div>
-                <div class="course" >
+                <div data-aos="fade-left" data-aos-duration="1000" class="course" >
                     <img src="img/mscd.png" alt="">
                     <div class="details">
                         <span>Updated 12/03/2024</span>
@@ -582,6 +582,9 @@
         </footer>
         <script src="index.js">
    
+        </script>
+        <script src="https://unpkg.com/aos@next/dist/aos.js">
+
         </script>
         <script>
             AOS.init();
