--- a/tharai/index.html
+++ b/tharai/index.html
@@ -35,7 +35,7 @@
     </div>
     </nav>
 <!-- hoome page -->
-<section data-aos="fade-right" data-aos-duration="1000" class="home">
+<section  class="home">
 <h2 data-aos="fade-left" data-aos-duration="1000">Empower Your Learning Journey with Us!</h2>
 <p data-aos="fade-left" data-aos-duration="1000">"Welcome to Tharai Edutech your go-to destination for mastering coding! Whether you're a newbie or a seasoned developer, our platform offers engaging courses, interactive tutorials, and expert guidance to help you level up your skills. Join us and unleash your coding superpowers today!"</p>
 <div class="button">
@@ -621,9 +621,12 @@
 <script src="index.js">
    
 </script>
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script>
-  AOS.init();
+<script src="https://unpkg.com/aos@next/dist/aos.js">
+
 </script>
+<script>
+    AOS.init();
+  </script>
+
 </body>
 </html>
