--- a/tharai/about.html
+++ b/tharai/about.html
@@ -10,7 +10,7 @@
 
     <title >Tharai Edutech</title>
 </head>
-<body>
+<body style="">
     <!-- navigation bar  -->
     <ul class="sidebar" style="" >
         <li onclick="hide()"><a href="#" style="margin-left: 22px;" ><i class="fa-solid fa-xmark " ></i> </a></li>
@@ -56,7 +56,7 @@
                     </div>
                  </div>
                  <div class="about-fe">
-                    <img data-aos="fade-right" data-aos-duration="1000" src="img/cc.png" alt="">
+                    <img data-aos="fade-right" data-aos-duration="1000" src="img/fe2.png" alt="">
                     <div class="fe-text">
                         <h5>Free Training</h5>
                         <p>We are Providing free Training for Certificate Courses for the first two batches.</p>
