--- a/tharai/about.html
+++ b/tharai/about.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+   
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Inter:wght@100..900&family=Noto+Sans+HK:wght@100..900&display=swap" rel="stylesheet"> <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title >Tharai Edutech</title>
@@ -15,20 +17,20 @@
     <ul class="sidebar" style="" >
         <li onclick="hide()"><a href="#" style="margin-left: 22px;" ><i class="fa-solid fa-xmark " ></i> </a></li>
         <li><a href="index.html">Home</a></li>
-        <li><a class="active" href="about.html"> About</a></li>
+        <li><a class="active" href="about.html"> About us</a></li>
         <li><a href="courses.html">Courses</a></li>
-        <li><a href="contact.html">Contact</a></li>    
+        <li><a href="contact.html">Contact us</a></li>    
     </ul>
     <nav  class="anav-bar"  >
-        <img src="img/loogo.png" alt="" ><h2 class="title" >Tharai Edutech</h2>
+        <img src="img/loogo.png" alt="" > <h2 class="title" ">THARAI EDUTECH <P style="font-size: 10px;padding-left: 22px;">   Empower Your Future: Code Your Way to Success!</P></h2>
 
         <div style="" class="navigation" >
           
         <ul >
             <li class="hideOnMobile"><a href="index.html">Home</a></li>
-            <li class="hideOnMobile"><a class="active" href="about.html"> About</a></li>
+            <li class="hideOnMobile"><a class="active" href="about.html"> About us</a></li>
             <li class="hideOnMobile"><a href="courses.html">Courses</a></li>
-            <li class="hideOnMobile"><a href="contact.html">Contact</a></li>   
+            <li class="hideOnMobile"><a href="contact.html">Contact us</a></li>   
             <li  onclick=show()><a href="#" class="hide"  ><i class="fa-solid fa-2x fa-bars" ></i></a></li> 
         </ul>
     </div>
@@ -72,7 +74,7 @@
            
         </section>
         <section class="establish">
-            <h1 data-aos="fade-up" data-aos-duration="1000">Our Eastablishments</h1>
+            <h1 data-aos="fade-up" data-aos-duration="1000">Our Eastablishment</h1>
             <p data-aos="fade-down" data-aos-duration="1000">"Diverse ventures, spanning industries wide."</p>
             <div class="trust-img">
                 <img data-aos="flip-left" data-aos-duration="2500" src="img/trust (1).png" alt="">
