--- a/tharai/index.html
+++ b/tharai/index.html
@@ -6,7 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Inter:wght@100..900&family=Noto+Sans+HK:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 
     <title>Tharai Edutech</title>
@@ -16,20 +18,21 @@
     <ul class="sidebar">
         <li onclick="hide()"><a href="#" style="margin-left: 22px;" ><i class="fa-solid fa-xmark " ></i> </a></li>
         <li><a class="active"href="index.html">Home</a></li>
-        <li><a href="about.html"> About</a></li>
+        <li><a href="about.html"> About us</a></li>
         <li><a href="courses.html">Courses</a></li>
-        <li><a href="contact.html">Contact</a></li>    
+        <li><a href="contact.html">Contact us</a></li>    
     </ul>
     <nav  class="nav-bar"  >
-        <img src="img/loogo.png" alt="" ><h2 class="title">Tharai Edutech</h2>
+        <img src="img/tharainewlogo-removebg-preview.png" alt="" >
+        <h2 class="title" ">THARAI EDUTECH <P style="font-size: 10px;padding-left: 22px;">   Empower Your Future: Code Your Way to Success!</P></h2>
 
         <div class="navigation" >
           
         <ul >
             <li class="hideOnMobile"><a class="active"href="index.html">Home</a></li>
-            <li class="hideOnMobile"><a href="about.html"> About</a></li>
+            <li class="hideOnMobile"><a href="about.html"> About us</a></li>
             <li class="hideOnMobile"><a href="courses.html">Courses</a></li>
-            <li class="hideOnMobile"><a href="contact.html">Contact</a></li>   
+            <li class="hideOnMobile"><a href="contact.html">Contact us</a></li>   
             <li  onclick=show()><a href="#" class="hide"><i class="fa-solid fa-2x fa-bars" ></i></a></li> 
         </ul>
     </div>
