--- a/tharai/contact.html
+++ b/tharai/contact.html
@@ -20,7 +20,7 @@
         <li><a class="active" href="contact.html">Contact us</a></li>    
     </ul>
     <nav  class="nav-bar"  >
-        <img src="img/loogo.png" alt="" > <h2 class="title" ">THARAI EDUTECH <P style="font-size: 10px;padding-left: 22px;">   Empower Your Future: Code Your Way to Success!</P></h2>
+        <img src="img/tharainewLogo.png" alt="" > <h2 class="title" ">THARAI EDUTECH <P style="font-size: 10px;padding-left: 22px;">   Empower Your Future: Code Your Way to Success!</P></h2>
 
         <div class="navigation" >
           
