--- a/tharai/index.html
+++ b/tharai/index.html
@@ -23,7 +23,7 @@
         <li><a href="contact.html">Contact us</a></li>    
     </ul>
     <nav  class="nav-bar"  >
-        <img src="img/tharainewlogo-removebg-preview.png" alt="" >
+        <img src="img/tharainewLogo.png" alt="" >
         <h2 class="title" ">THARAI EDUTECH <P style="font-size: 10px;padding-left: 22px;">   Empower Your Future: Code Your Way to Success!</P></h2>
 
         <div class="navigation" >
