--- a/tharai/contact.html
+++ b/tharai/contact.html
@@ -15,20 +15,20 @@
     <ul class="sidebar">
         <li onclick="hide()"><a href="#" style="margin-left: 22px;" ><i class="fa-solid fa-xmark " ></i> </a></li>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html"> About us</a></li>
+        <li><a href="about.html"> About Us</a></li>
         <li><a href="courses.html">Courses</a></li>
-        <li><a class="active" href="contact.html">Contact us</a></li>    
+        <li><a class="active" href="contact.html">Contact Us</a></li>    
     </ul>
     <nav  class="nav-bar"  >
-        <img src="img/tharainewLogo.png" alt="" > <h2 class="title" ">THARAI EDUTECH <P style="font-size: 10px;padding-left: 22px;">   Empower Your Future: Code Your Way to Success!</P></h2>
+        <img src="img/logo-green.svg" alt="" > <h2 class="title" ">THARAI EDUTECH <P style="font-size: 10px;padding-left: 22px;">   Empower Your Future: Code Your Way to Success!</P></h2>
 
         <div class="navigation" >
           
         <ul >
             <li class="hideOnMobile"><a href="index.html">Home</a></li>
-            <li class="hideOnMobile"><a href="about.html"> About us</a></li>
+            <li class="hideOnMobile"><a href="about.html"> About Us</a></li>
             <li class="hideOnMobile"><a href="courses.html">Courses</a></li>
-            <li class="hideOnMobile"><a class="active" href="contact.html">Contact us</a></li>   
+            <li class="hideOnMobile"><a class="active" href="contact.html">Contact Us</a></li>   
             <li  onclick=show()><a href="#" class="hide"><i class="fa-solid fa-2x fa-bars" ></i></a></li> 
         </ul>
     </div>
