--- a/tharai/contact.html
+++ b/tharai/contact.html
@@ -20,7 +20,9 @@
         <li><a class="active" href="contact.html">Contact Us</a></li>    
     </ul>
     <nav  class="nav-bar"  >
-        <img src="img/logo-green.svg" alt="" > <h2 class="title" ">THARAI EDUTECH <P style="font-size: 10px;padding-left: 22px;">   Empower Your Future: Code Your Way to Success!</P></h2>
+        <img src="img/logo-green.svg" alt="" >   <h2 class="title" ">THARAI EDUTECH 
+            <P class="tag-line" style="font-size: 10px;">   Empower Your Future: Code Your Way to Success!</P>
+            </h2>
 
         <div class="navigation" >
           
