--- a/tharai/about.html
+++ b/tharai/about.html
@@ -22,7 +22,9 @@
         <li><a href="contact.html">Contact us</a></li>    
     </ul>
     <nav  class="anav-bar"  >
-        <img src="img/logo-green.svg" alt="" > <h2 class="title" ">THARAI EDUTECH <P style="font-size: 10px;padding-left: 22px;">   Empower Your Future: Code Your Way to Success!</P></h2>
+        <img src="img/logo-green.svg" alt="" >   <h2 class="title" ">THARAI EDUTECH 
+            <P class="tag-line" style="font-size: 10px;">   Empower Your Future: Code Your Way to Success!</P>
+            </h2>
 
         <div style="" class="navigation" >
           
