--- a/tharai/index.html
+++ b/tharai/index.html
@@ -15,8 +15,9 @@
 </head>
 <body  data-bs-spy="scroll" data-bs-target=""> <!-- prev BG- #8871fc-->
     <ul class="sidebar">
-        <li onclick="hide()"><a href="#" style="margin-left: 22px;" ><i class="fa-solid fa-xmark " ></i> </a></li>
-        <li><a href="index.html">Home</a></li>
+        <li onclick="hide()"><a href="#" style="margin-left: 22px;" ><i class="fa-solid fa-xmark " ></i> </a>
+        </li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html"> About Us</a></li>
         <li><a class="active" href=""></a>
             <div class="dropdown mt-1 " >
@@ -46,9 +47,9 @@
         <div style="" class="navigation" >
           
         <ul >
-            <li class="hideOnMobile"><a  href="index.html">Home</a></li>
+            <li class="hideOnMobile"><a class="active" href="index.html">Home</a></li>
             <li class="hideOnMobile"><a  href="about.html"> About Us</a></li>
-            <li class="hideOnMobile" style="display: flex;"><a class="active" href=""></a>
+            <li class="hideOnMobile" style="display: flex;"><a  href=""></a>
                 <div class="dropdown mt-1 " id="Menu">
                     <button class="btn btn-outline-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Courses
