--- a/tharai/about.html
+++ b/tharai/about.html
@@ -15,9 +15,10 @@
 <body style="" >
     <!-- navigation bar  -->
     <ul class="sidebar">
-        <li onclick="hide()"><a href="#" style="margin-left: 22px;" ><i class="fa-solid fa-xmark " ></i> </a></li>
+        <li onclick="hide()"><a href="#" style="margin-left: 22px;" ><i class="fa-solid fa-xmark " ></i> </a>
+        </li>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html"> About Us</a></li>
+        <li><a href="about.html" class="active"> About Us</a></li>
         <li><a class="active" href=""></a>
             <div class="dropdown mt-1 " >
                 <button class="btn btn-outline-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -47,8 +48,8 @@
           
         <ul >
             <li class="hideOnMobile"><a  href="index.html">Home</a></li>
-            <li class="hideOnMobile"><a  href="about.html"> About Us</a></li>
-            <li class="hideOnMobile" style="display: flex;"><a class="active" href=""></a>
+            <li class="hideOnMobile"><a class="active" href="about.html"> About Us</a></li>
+            <li class="hideOnMobile" style="display: flex;"><a  href=""></a>
                 <div class="dropdown mt-1 " id="Menu">
                     <button class="btn btn-outline-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Courses
