--- a/tharai/contact.html
+++ b/tharai/contact.html
@@ -13,10 +13,11 @@
 <body >
     <!-- navigation bar  -->
     <ul class="sidebar">
-        <li onclick="hide()"><a href="#" style="margin-left: 22px;" ><i class="fa-solid fa-xmark " ></i> </a></li>
+        <li onclick="hide()"><a href="#" style="margin-left: 22px;" ><i class="fa-solid fa-xmark " ></i> </a>
+        </li>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html"> About Us</a></li>
-        <li><a class="active" href=""></a>
+        <li><a  href=""></a>
             <div class="dropdown mt-1 " >
                 <button class="btn btn-outline-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Courses
@@ -34,7 +35,7 @@
                 </ul>
               </div>
         </li>
-        <li><a  href="contact.html">Contact Us</a></li>    
+        <li><a  href="contact.html"class="active">Contact Us</a></li>    
     </ul>
     <nav  class="anav-bar"  >
         <img src="img/logo-green.svg" alt="" >   <h2 class="title" ">Tharai EduTech
@@ -46,7 +47,7 @@
         <ul >
             <li class="hideOnMobile"><a  href="index.html">Home</a></li>
             <li class="hideOnMobile"><a  href="about.html"> About Us</a></li>
-            <li class="hideOnMobile" style="display: flex;"><a class="active" href=""></a>
+            <li class="hideOnMobile" style="display: flex;"><a  href=""></a>
                 <div class="dropdown mt-1 " id="Menu">
                     <button class="btn btn-outline-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Courses
@@ -66,7 +67,7 @@
                 
             
             </li>
-            <li class="hideOnMobile"><a href="contact.html">Contact Us</a></li>   
+            <li class="hideOnMobile"><a href="contact.html" class="active">Contact Us</a></li>   
             <li  onclick=show()><a href="#" class="hide"  ><i class="fa-solid fa-2x fa-bars" ></i></a></li> 
         </ul>
     </div>
