marquee tag included

--- a/tharai/contact.html
+++ b/tharai/contact.html
@@ -72,7 +72,11 @@
         </ul>
     </div>
     </nav>
- 
+    <section>
+        <marquee behavior="scroll" direction="left" scrollamount="5">
+            Career-focused curriculum | Flexible learning options | Expert instructors | Hands-on projects | Collaborative learning environment | Job placement assistance | Scholarships based on performance | Live Q&A sessions | Continuous updates | Personalized learning paths
+        </marquee>
+    </section>
        
         <section >
             <div class="contact-intro">
