--- a/tharai/fullstack.html
+++ b/tharai/fullstack.html
@@ -82,6 +82,11 @@
         </ul>
     </div>
     </nav>
+    <section>
+        <marquee behavior="scroll" direction="left" scrollamount="5">
+            Career-focused curriculum | Flexible learning options | Expert instructors | Hands-on projects | Collaborative learning environment | Job placement assistance | Scholarships based on performance | Live Q&A sessions | Continuous updates | Personalized learning paths
+        </marquee>
+    </section>
 
     <section id="courses">
         <h1 data-aos="fade-up" data-aos-duration="1000" > 
