--- a/tharai/index.html
+++ b/tharai/index.html
@@ -75,6 +75,12 @@
     </div>
     </nav>
 <!-- hoome page -->
+ 
+<section>
+    <marquee behavior="scroll" direction="left" scrollamount="5">
+        Career-focused curriculum | Flexible learning options | Expert instructors | Hands-on projects | Collaborative learning environment | Job placement assistance | Scholarships based on performance | Live Q&A sessions | Continuous updates | Personalized learning paths
+    </marquee>
+</section>
 <section  class="home">
 <h2 data-aos="fade-left" data-aos-duration="1000">Empower Your Learning Journey with Us!</h2>
 <p data-aos="fade-left" data-aos-duration="1000">"Welcome to Tharai Edutech your go-to destination for mastering coding! Whether you're a newbie or a seasoned developer, our platform offers engaging courses, interactive tutorials, and expert guidance to help you level up your skills. Join us and unleash your coding superpowers today!"</p>
@@ -86,6 +92,7 @@
 
 </section>
  <!-- Popular Courses -->
+ 
  <section id="courses">
     <h1 data-aos="fade-down" data-aos-duration="1000"> POPULAR COURSES </h1>
     <p data-aos="fade-up" data-aos-duration="1000">Forge Ahead in Your Career with Courses Aligned to Industry Needs.</p>
