--- a/tharai/courses.html
+++ b/tharai/courses.html
@@ -82,6 +82,17 @@
         </ul>
     </div>
     </nav>
+    <section>
+        <marquee behavior="scroll" direction="left" scrollamount="5">
+            Career-focused curriculum | Flexible learning options | Expert instructors | Hands-on projects | Collaborative learning environment | Job placement assistance | Scholarships based on performance | Live Q&A sessions | Continuous updates | Personalized learning paths
+        </marquee>
+    </section>
+    <section>
+        <marquee behavior="scroll" direction="left" scrollamount="5">
+            Career-focused curriculum | Flexible learning options | Expert instructors | Hands-on projects | Collaborative learning environment | Job placement assistance | Scholarships based on performance | Live Q&A sessions | Continuous updates | Personalized learning paths
+        </marquee>
+    </section>
+
 
     <section  class="coursess">
         <div class="ctitle">
