--- a/tharai/index.html
+++ b/tharai/index.html
@@ -513,8 +513,9 @@
         
      <div class="p-box">
             <div data-aos="flip-up" data-aos-duration="1000" class="p" >
-                <img src="img/pro2.webp" class="profile" alt="">
-             <h5>Nikhil</h5>
+                <img src="img/TamilSelvam.jpeg" class="profile" alt="">
+             <h5>Tamil Selvam</h5>
+             <h6>BE,MBA</h6>
              <p>CEO</p> 
              <a href="" >    <i class="fa-brands fa-linkedin fa-2x" "></i></a>
                  <a href=""><i class="fa-brands fa-instagram fa-2x"></i></a>
